--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Engineering JavaScript - Integration Team - Take-Home Challenge",
   "scripts": {
-    "start-instrument": "node ./instrument/server.js 9889",
-    "start-driver": "node ./driver/client.js 9889"
+    "instrument": "node ./instrument/server.js 9889",
+    "driver": "node ./driver/client.js 9889 localhost"
   },
   "repository": {
     "type": "git",
